--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
